# transclipt

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: acceptance-test-agent.md  architect-reviewer-agent.md  babysit-pr-analyst.md  babysit-pr-fixer.md  debug-agent.md  evaluator-agent.md  implement-planner-agent.md  security-reviewer-agent.md  sprint-plan-docs-reader.md  sprint-plan-gap-analyzer.md  sprint-plan-tracker-reader.md  story-executor-agent.md  story-plan-agent.md  story-pr-agent.md  story-understand-agent.md  troubleshoot-investigator.md
.claude/hooks/: README.md  SECURITY.md  catalog-skills.js  catalog-trigger.js  drift-check.js  pre-compact.js  safety-check.js  session-log.js
.claude/hooks/lib/: artifact-parsers.js  frontmatter.js  hook-io.js  walk.js
.claude/rules/: code-style.md  documentation.md  git-worktrees.md  security.md  test-philosophy.md  testing.md
.claude/skills/architect/: SKILL.md
.claude/skills/architect-critique/: SKILL.md
.claude/trackers/: README.md
.github/workflows/: pages.yml  tests.yml
_prototype/video-transcriber/: decision.md
_prototype/video-transcriber/candidate-b/: README.md  pyproject.toml
_prototype/video-transcriber/candidate-b/riptext/: transcriber.py
docs/adr/: 0000-template.md  README.md
docs/landing/: index.html
riptext/: __init__.py  cli.py  downloader.py  formatter.py
tasks/: notes.md  plan.md
tests/: test_cli.py  test_downloader.py  test_formatter.py  test_transcriber.py
transclipt/: __init__.py  cli.py  downloader.py  formatter.py
(+92 files in other folders)
