[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riptext"
version = "0.1.0"
description = "Transcribe any video URL to text. YouTube, Instagram, TikTok, Twitter, Spotify, and 1000+ more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "yt-dlp>=2024.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
spotify = ["spotdl>=4.2.0"]

[project.scripts]
riptext = "riptext.cli:app"
